# disk_usage

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  app.cpp  appveyor.yml  create_release.yml  readme.md
.github/: issue_template.md  stale.yml
.github/workflows/: clang_format.yml  create_release.yml
disker/: analyser.cpp  analyser.h  logging.cpp  logging.h
disker/helpers/: flat_tree.cpp  flat_tree.h  synchronized.h
disker/platform/: apple.cpp  apple.h  unix.cpp  unix.h  windows.cpp
disker/widgets/: analyser.cpp  analyser.h  analyser.ui  disker.cpp  disker.h  disker.ui  selection.cpp  selection.h  selection.ui  selector.cpp  selector.h  selector.ui  style.cpp  style.h
docker/: Dockerfile.ubuntu
test/: test_logging.cpp
test/helpers/: test_flat_tree.h  test_synchronized.cpp
test/platform/: test_apple.cpp  test_unix.cpp
